--- a/styles/type.css
+++ b/styles/type.css
@@ -31,16 +31,28 @@
 
 
 h1 {
-	font-family: "Buffalo Bold Inline", Helvetica;
-	font-size: 9rem;
-	/*max-width: 750px;*/
+	font-family: "Buffalo Bold Inline", "Titillium Web", Verdana;
+	font-size: 4rem;
+	margin-bottom: .5rem;
 	color: white;
 	text-align: center;
 }
 
+@media (min-width: 600px) {
+	h1 {
+		font-size: 6rem;
+	}
+}
+
+@media (min-width: 900px) {
+	h1 {
+		font-size: 7rem;
+	}
+}
+
 @media (min-width: 1080px) {
 	h1 {
-		margin-bottom: .5rem;
+		font-size: 9rem;
 	}
 }
 
@@ -65,15 +77,21 @@ h4 {
 
 h5 {
 	font-family: "Buffalo Light";
-	font-size: 4.4rem;
-	/*max-width: 750px;*/
+	font-size: 3rem;
+	margin-top: .5rem;
 	color: white;
 	text-align: center;
 }
 
+@media (min-width: 600px) {
+	h5 {
+		font-size: 3.6rem;
+	}
+}
+
 @media (min-width: 1080px) {
 	h5 {
-		margin-top: .5rem;
+		font-size: 5rem;
 	}
 }
 
