done, for now, maybe

--- a/styles/graphics.css
+++ b/styles/graphics.css
@@ -4,6 +4,8 @@
 .graphics__video {
 	margin-left: 50%;
 	transform: translateX(-50%);
+	margin-top: 2rem;
+	margin-bottom: 2rem;
 
 	width: 256px;
 	height: 144px;
