--- a/styles/layout.css
+++ b/styles/layout.css
@@ -3,4 +3,17 @@ body {
 	background-color: #47505c;
 }
 
+.small-space {
+	width: 16px;
+	height: 50px;
+}
 
+.medium-space {
+	width: 16px;
+	height: 100px;
+}
+
+.large-space {
+	width: 16px;
+	height: 200px;
+}
